# LowResource-LLM-Forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  roadmap.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_language.md
.github/workflows/: ci.yml  eval-gate.yml  eval-gate.yml.disabled  vm330-ssh-bootstrap.yml.disabled
configs/: base.yaml
configs/data/: azerbaijani.yaml  template.yaml  turkish.yaml  whisper.yaml
configs/models/: llama3_8b_tr.yaml  turkcell_7b.yaml  turkcell_7b_a100_resume.yaml  turkcell_7b_a100_resume_bf16_clean.yaml  wiroai_9b.yaml  (+11 more)
deploy/: Dockerfile.serve  Dockerfile.train  cog.yaml  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  ROADMAP.md  TRAINING_GUIDE.md
notebooks/: 01_data_exploration.ipynb  02_training_analysis.ipynb
scripts/: benchmark_openai_endpoint.py  compare_benchmark_results.py  deploy_vllm.sh  download_data.py  generate_training_manifest.py  install_training_services.sh  install_v100_watchdog.sh  merge_and_push.py  monitor_a100_training.sh  monitor_training.sh  monitor_v100_training.sh  post_training_pipeline.sh  publish_to_hub.py  run_eval.py  run_posttrain_if_complete.sh  run_serve.py  run_training.py  run_v100_completion.sh  runtime_dashboard.sh  set_wandb_key.sh  smoke_serve.py  start_a100_training.sh  start_or_resume_full_training.sh  start_v100_training.sh  training_watchdog.py  transcribe_audio.py  watch_v8_stability_gate.sh  watchdog_training.sh
tests/: test_callbacks.py  test_collector.py  test_config.py  test_dataset_builder.py  test_evaluator.py  test_integration_pipeline.py  test_language_detection.py  test_logging.py  test_merge_tokenizer_config.py  test_preprocessor.py  test_publish.py  test_replicate_predict.py  test_runtime_guard.py  test_script_help.py  test_vllm_server.py  test_whisper_transcriber.py
(+33 files in other folders)
