[project]
name = "lowresource-llm-forge"
version = "0.1.0"
description = "Sovereign LLM fine-tuning pipeline for low-resource languages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=24.1.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# GPU training deps — install on training machines only
train = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
    "accelerate>=0.25.0",
    "wandb>=0.16.0",
]
eval = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "lm-eval>=0.4.0",
]
# These are environment-specific and mutually exclusive (different torch versions)
# Install on target machines with: pip install unsloth[cu121] or pip install vllm
# DO NOT install together — they pin different torch versions
serve = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
whisper = ["openai-whisper>=20231117", "ffmpeg-python>=0.2.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
forge = "forge.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
packages = ["forge"]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["forge"]

[tool.coverage.report]
fail_under = 40
show_missing = true
